--- a/PANDAS_PROJECT/read_write_csv_excel_json_sql.ipynb
+++ b/PANDAS_PROJECT/read_write_csv_excel_json_sql.ipynb
@@ -4630,7 +4630,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4644,7 +4644,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f778747a31e032e1b6f15c82b1b0cc5b3d74c4073d96006016be9bc0cb3b3b43"
+   }
   }
  },
  "nbformat": 4,
